--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,66 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/scooters
 spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+guideline.districts=Hamburg:30,Berlin:15,London:40,Rome:15
+guideline.damagedPercent=0.15
+guideline.damageReasons=Scratched,Disfunctional,Broken
+
+guideline.type1.name=City Scooter Basic E
+guideline.type1.firstYearOfProduction=2012
+guideline.type1.lastYearOfProduction=2014
+guideline.type1.firstAddedToFleet=2012
+guideline.type1.lastAddedToFleet=2015
+guideline.type1.totalAmount=25
+guideline.type1.deployedPercent=75
+guideline.type1.price=7.99
+guideline.type1.halfDayDiscount=0.04
+guideline.type1.fullDayDiscount=0.06
+guideline.type1.threeDayDiscount=0.08
+guideline.type1.weekDiscount=0.1
+guideline.type1.parts=Baseplate,Break,Front Wheel,Rear Wheel,Handlebar,Handle Support,Folding Mechanics,Front Light,Rear Light,Suspension,Battery,Engine
+
+guideline.type2.name=City Scooter 3000E
+guideline.type2.firstYearOfProduction=2013
+guideline.type2.lastYearOfProduction=2014
+guideline.type2.firstAddedToFleet=2014
+guideline.type2.lastAddedToFleet=2016
+guideline.type2.totalAmount=10
+guideline.type2.deployedPercent=80
+guideline.type2.price=8.99
+guideline.type2.halfDayDiscount=0.04
+guideline.type2.fullDayDiscount=0.06
+guideline.type2.threeDayDiscount=0.08
+guideline.type2.weekDiscount=0.1
+guideline.type2.options=Battery Upgrade, X5 Engine
+guideline.type2.parts=Baseplate,Break,Front Wheel,Rear Wheel,Handlebar,Handle Support,Folding Mechanics,Front Light,Rear Light,Suspension,Battery,Engine,Seat
+
+guideline.type3.name=Scoot Master
+guideline.type3.firstYearOfProduction=2018
+guideline.type3.lastYearOfProduction=2019
+guideline.type3.firstAddedToFleet=2018
+guideline.type3.lastAddedToFleet=2019
+guideline.type3.totalAmount=2
+guideline.type3.deployedPercent=95
+guideline.type3.price=14.99
+guideline.type3.halfDayDiscount=0.05
+guideline.type3.fullDayDiscount=0.075
+guideline.type3.threeDayDiscount=0.1
+guideline.type3.weekDiscount=0.125
+guideline.type3.options=Battery Upgrade,Foldable Seat,Sport Handle
+guideline.type3.parts=Baseplate,Break,Front Wheel,Rear Wheel,Handlebar,Handle Support,Folding Mechanics,Front Light,Rear Light,Suspension,Battery,Engine,Seat
+
+guideline.type4.name=GSX-E
+guideline.type4.firstYearOfProduction=2019
+guideline.type4.lastYearOfProduction=2019
+guideline.type4.firstAddedToFleet=2019
+guideline.type4.lastAddedToFleet=2019
+guideline.type4.totalAmount=1
+guideline.type4.deployedPercent=100
+guideline.type4.price=29.99
+guideline.type4.halfDayDiscount=0.02
+guideline.type4.fullDayDiscount=0.03
+guideline.type4.threeDayDiscount=0.04
+guideline.type4.weekDiscount=0.05
+guideline.type4.options=X12E Engine,Leather Seat,12-inch Multimedia Center,1000W Sound System,Navigation System,Street Legal,Ivory Handle,Convertible Roof
+guideline.type4.parts=Baseplate,Break,Front Wheel,Rear Wheel,Handlebar,Handle Support,Folding Mechanics,Front Light,Rear Light,Suspension,Battery,Engine,Seat,Roof,Break Light,Multimedia Center,Sound System,Navigation System,License Plate
