--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/scooters
 spring.datasource.username=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
 
-guideline.districts=Hamburg:30,Berlin:15,London:40,Rome:15
+# Formatting: Country;State;City;PercentageOfScooters
+guideline.districts=Germany:Hamburg:Hamburg,Germany:Berlin:Berlin,United Kingdom:London:London,Italy:Lazio:Rome
 guideline.damagedPercent=0.15
 guideline.damageReasons=Scratched,Disfunctional,Broken
 
